Fix error function playlist